@startuml ComponentManagers
!include style.puml
skinparam arrowThickness 1.1
skinparam arrowColor LOGIC_COLOR_T4
skinparam classBackgroundColor LOGIC_COLOR

title Component Managers

package Logic as LogicPackage {
class "<<interface>>\nLogic" as Logic
class LogicManager
}

package Model as ModelPackage {
class "<<interface>>\nModel" as Model
class ModelManager
}

package Storage as StoragePackage {
class "<<interface>>\nStorage" as Storage
class StorageManager
}

class HiddenOutside #FFFFFF
HiddenOutside ..> Logic

LogicManager .up.|> Logic
ModelManager .up.|> Model
StorageManager .up.|> Storage

LogicManager --> Model
LogicManager --> Storage
@enduml
